<resources>
    <string name="app_name">奇愈记</string>
    <string name="home_title">首页</string>
    <string name="visit_title">随访</string>
    <string name="caseHistory">病历</string>
    <string name="information_title">消息</string>
    <string name="birth_date">出生日期</string>
    <string name="project">项目</string>
    <string name="please_select">请选择</string>

    <string name="gender">性别</string>
    <string name="location_citiy">所在城市</string>
    <string name="user_icon">用户信息</string>
    <string name="user_agreement">用户协议</string>
    <string name="about_us">关于我们</string>
    <string name="real_name">真实用户</string>
    <string name="girl">女士</string>
    <string name="boy">男士</string>
    <string name="save">保存</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="send_ver_code">发送验证码</string>
    <string name="read_agree">我已阅读,并同意《</string>
    <string name="register_deal">用户注册协议</string>

    <string name="course">患教课程</string>
    <string name="newCourse">患教课堂</string>
    <string name="medical">医疗机构</string>
    <string name="loveAction">关爱行动</string>
    <string name="visitAction">随访行动</string>
    <string name="offline">线下沙龙</string>
    <string name="coupe">科普咨询</string>
    <string name="more">更多</string>
    <string name="all_serve">全部服务</string>

    <string name="cancel">取消</string>
    <string name="pwSubmit">确定</string>
    <string name="patientData">患者资料</string>
    <string name="identityCard">身份证号</string>
    <string name="eighteen">18位身份证号</string>
    <string name="phone">手机号</string>
    <string name="flowers">11位手机号</string>
    <string name="actionsDoctorName">主诊医生姓名</string>
    <string name="firstVisitTime">首诊时间</string>
    <string name="diseases">疾病种类</string>
    <string name="platformPlan">治疗方案</string>
    <string name="patientRelation">与患者关系</string>
    <string name="visitManage">随访</string>
    <string name="visitTeam">随访团队</string>
    <string name="followUpReport">随访报告</string>
    <string name="myScale">我的量表</string>
    <string name="scaleDetails">量表详情</string>
    <string name="question">提问</string>
    <string name="doctorNoticeList">医生公告列表</string>
    <string name="doctorNotice">医生公告</string>
    <string name="doctorNoticeDetails">公告详情</string>
    <string name="systemNotice">系统公告</string>
    <string name="systemMessages">系统消息</string>
    <string name="systemMessagesDetails">系统消息详情</string>


    <string name="visitDialogue">随访对话</string>
    <string name="quizEtNum">0/500字</string>
    <string name="quizText">门诊手册拍照上传</string>
    <string name="outpatientData">门诊资料</string>
    <string name="addOutpatientData">添加门诊资料</string>
    <string name="addLeaveHospitalData">添加出院小结</string>
    <string name="outpatientInfo">门诊信息</string>
    <string name="leaveHospital">出院小结</string>
    <string name="examinationReportSheet">检查报告单</string>
    <string name="therapeuticRegimen">用药方案记录</string>
    <string name="pharmacy">用药方案</string>
    <string name="pharmacyRecord">用药方案记录</string>
    <string name="pharmacyWay">用药方式</string>

    <string name="addPharmacyRecord">添加用药方案记录</string>
    <string name="symptomatography">身体症状记录</string>
    <string name="addSymptomatography">添加身体症状记录</string>
    <string name="symptomatraphy">症状记录</string>
    <string name="symptom">症状</string>
    <string name="inspectionReport">检查报告单</string>
    <string name="selectReport">选择报告单类型</string>
    <string name="addInspectionReport">添加检查报告单</string>
    <string name="symptomaDescriptions">症状描述</string>
    <string name="doctor">医生</string>
    <string name="commit">提交</string>
    <string name="add">添加</string>
    <string name="remark">请在这里填写备注.(选填)</string>
    <string name="ruHospitalTime">入院时间</string>
    <string name="OutHospitalTime">出院时间</string>
    <string name="remind">提醒</string>
    <string name="project_content">请输入</string>
    <string name="finish">完成</string>
    <string name="remindTime">提醒时间</string>
    <string name="repetition">重复提醒</string>
    <string name="recurrenceInterval">每</string>
    <string name="details">详情</string>
    <string name="modification">修改</string>
    <string name="loading">加载中…</string>
    <string name="pref_key_translate">translate</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">请开始说话…</string>



    <string name="quizHint">你可以向随访医生团队咨询问题，请尽可能简练、准确的描述症状、部位等信息，方便医生给的准确建议。你也可以拍照进行上传</string>


</resources>
