<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/dialog_bg1"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="每上传一份病历资料，"
        android:textColor="@color/app_userInfor"
        android:textSize="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="医生对您的随访就能更准确一分！"
        android:textColor="@color/app_userInfor"
        android:textSize="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="请将每一份现有和将来的资料都进行上传！"
        android:textColor="@color/app_userInfor"
        android:textSize="16dp"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/tv_leave_hospital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/leave_hospital"
            android:gravity="center_horizontal"
            android:text="@string/leaveHospital"
            android:textColor="@color/app_userInfor"/>

        <TextView
            android:id="@+id/tv_examine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/examine"
            android:gravity="center_horizontal"
            android:text="@string/examinationReportSheet"
            android:textColor="@color/app_userInfor"/>

        <TextView
            android:id="@+id/tv_outpatient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/outpatient"
            android:gravity="center_horizontal"
            android:text="@string/outpatientData"
            android:textColor="@color/app_userInfor"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tv_symptomatography"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/symptomatography"
            android:gravity="center_horizontal"
            android:text="@string/symptomatraphy"
            android:textColor="@color/app_userInfor"/>

        <TextView
            android:id="@+id/tv_pharmacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/pharmacy"
            android:gravity="center_horizontal"
            android:text="@string/pharmacy"
            android:textColor="@color/app_userInfor"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_update_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/delete"/>

</LinearLayout>