<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".activity.UserInforActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/iv_userinfor_back"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:src="@drawable/iv_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_icon"
            android:textColor="#000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_save_userinfor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/save"
            android:textColor="#333333"
            android:textSize="14sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="#f7f7f7"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/user_icon"
            android:textColor="@color/app_userInfor"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/iv_head_arrows"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:src="@drawable/mine_arrows"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/civ_head"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/iv_head_arrows"
            android:src="@drawable/home_box"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/real_name"
            android:textColor="@color/app_userInfor"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_name"
            android:text="(便于医生联络)"
            android:textColor="@color/app_gray"/>
        <ImageView
            android:id="@+id/iv_name_arrows"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/mine_arrows"/>

        <EditText
            android:id="@+id/tv_real_name"
            android:hint="请输入真实的姓名"
            android:gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:background="@null"
            android:focusable="true"
            android:textSize="12sp"
            android:layout_toLeftOf="@id/iv_name_arrows"
            android:textColorHint="@color/app_gray"
            android:textColor="@color/app_gray"/>



    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="#f7f7f7"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_citiy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/location_citiy"
            android:textColor="@color/app_userInfor"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_select_citiy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tv_citiy"
            android:text="@string/please_select"
            android:textColor="@color/app_gray"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_gray"/>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/gender"
            android:textColor="@color/app_userInfor"
            android:textSize="14sp"/>

        <ImageView

            android:id="@+id/iv_girl"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/tv_gender"
            android:src="@drawable/check_box_normal"/>

        <TextView
            android:id="@+id/tv_girl_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@id/iv_girl"
            android:text="@string/girl"
            android:textColor="@color/app_gray"
            android:textSize="12sp"/>


        <ImageView
            android:id="@+id/iv_boy"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/tv_girl_s"
            android:src="@drawable/check_box_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@id/iv_boy"
            android:text="@string/boy"
            android:textColor="@color/app_gray"
            android:textSize="12sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/birth_date"
            android:textColor="@color/app_userInfor"
            android:textSize="14sp"/>


        <TextView
            android:id="@+id/tv_select_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tv_Date"
            android:text="@string/please_select"
            android:textColor="@color/app_gray"/>

    </RelativeLayout>


</LinearLayout>
