<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/view_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_circle_et_bg">

        <EditText
            android:id="@+id/id_editor_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/quizHint"
            android:maxLength="140"
            android:minLines="6"
            android:paddingLeft="21dp"
            android:paddingRight="19dp"
            android:paddingTop="7dp"
            android:textColor="@color/quizEtHint"
            android:textColorHint="@color/quizEtHint"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/id_editor_detail_font_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/id_editor_detail"
            android:layout_marginRight="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_2"
            android:text="@string/quizEtNum"
            android:textColor="@color/app_gray"
            android:textSize="@dimen/sp_14"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="35dp"

        android:background="@color/app_white">
        <ImageView
            android:id="@+id/iv_quiz_pic"
            android:layout_width="51dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@drawable/home_all_serve"
            android:layout_height="51dp"/>
        <TextView
            android:id="@+id/tv_quiz"
            android:layout_toRightOf="@id/iv_quiz_pic"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/text_size_small2"
            android:textColor="@color/app_userInfor"
            android:text="@string/quizText"
            android:layout_height="@dimen/dp_14"/>


    </RelativeLayout>


</LinearLayout>