<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/view_bg"
              android:orientation="vertical">

    <include layout="@layout/layout_titlebar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_bg"/>

    <RelativeLayout
        android:background="@color/app_white"
        android:layout_width="match_parent"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:focusableInTouchMode="true"
        android:layout_height="51dp">

        <TextView
            android:id="@+id/tv_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/project"
            android:textColor="@color/app_userInfor"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/tv_project_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:maxLength="20"
            android:maxLines="1"
            android:focusable="true"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:layout_toRightOf="@id/tv_project"
            android:text="@string/project_content"
            android:textColor="@color/app_gray"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_circle_et_bg">

        <TextView
            android:id="@+id/remark"
            android:textColor="@color/app_userInfor"
            android:text="备注:"
            android:layout_marginTop="7dp"
            android:textSize="14sp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/id_editor_detail"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/remark"
            android:paddingLeft="60dp"
            android:paddingRight="19dp"
            android:paddingTop="7dp"
            android:textColor="@color/quizEtHint"
            android:textColorHint="@color/quizEtHint"
            android:textSize="12sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:background="@color/app_white"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="51dp">

        <TextView
            android:id="@+id/tv_first_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/remindTime"
            android:textColor="@color/app_userInfor"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_remind_week_time"
            android:text="星期一"
            android:gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:background="@null"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="3dp"
            android:focusable="true"
            android:textSize="12sp"
            android:layout_alignParentRight="true"
            android:textColorHint="@color/app_gray"
            android:textColor="@color/app_gray"/>


        <TextView
            android:id="@+id/tv_remind_time"
            android:text="2018-1-1"
            android:gravity="right|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:layout_toLeftOf="@id/tv_remind_week_time"
            android:background="@null"
            android:focusable="true"
            android:textSize="12sp"
            android:textColorHint="@color/app_gray"
            android:textColor="@color/app_gray"/>
    </RelativeLayout>


</LinearLayout>